--- a/index.html
+++ b/index.html
@@ -80,21 +80,21 @@
     </div>
       <div class="news-cards">
       <div class="cls">
-        <img src="img/FCL.png" alt="" />
+        <img src="img/fcl_cna.jpg" alt="" />
         <h3>FCL</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
           doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
         </p>
       </div>
       <div class="cls">
-        <img src="img/LCL.png" alt="" />
+        <img src="img/lcl_cna.jpg" alt="" />
         <h3>LCL</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
           doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
         </p>
       </div>
       <div class="cls">
-        <img src="img/aereo.jpg" alt="" />
+        <img src="img/air_cna.jpg" alt="" />
         <h3>ÁEREO</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
           doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
