--- a/index.html
+++ b/index.html
@@ -30,13 +30,16 @@
       <!-- Left Nav -->
       <ul class="nav-menu">
         <li>
-            <a href="#">Inicio</a>
+            <a href="../CNA/index.html">Inicio</a>
           </li>
           <li>
-            <a href="#">Quienes Somos</a>
+            <a href="#">Nosotros</a>
           </li>
           <li>
-            <a href="#">Servicios</a>
+            <a href="../CNA/importaciones.html">Importar</a>
+          </li>
+          <li>
+            <a href="#">Exportar</a>
           </li>
           <li>
             <a href="#">Contacto</a>
@@ -125,9 +128,9 @@
       <section>
         <ul>
           <li><h3>Enlaces rápidos</h3></li>
-          <li><a href="#">Inicio</a></li>
+          <li><a href="../CNA/index.html">Inicio</a></li>
           <li><a href="#">Acerca de nosotros</a></li>
-          <li><a href="#">Importaciones</a></li>
+          <li><a href="../CNA/importaciones.html">Importaciones</a></li>
           <li><a href="#">Exportaciones</a></li>
         </ul>
       </section>
