--- a/nosotros.html
+++ b/nosotros.html
@@ -77,31 +77,30 @@
     <!-- NEWS CARDS -->
     <div class="news-cards">
       <div>     
-        <h2>Nuestras Soluciones Integrales</h2>
-        <h2>Fletes Internacionales</h2>
+        <h2>Nuestro Equipo</h2>
       </div>
     </div>
       <div class="news-cards">
       <div class="cls">
-        <img src="img/fcl_cna.jpg" alt="" />
-        <h3>FCL</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
-          doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
-        </p>
+        <img src="img/people1.jpg" alt="" />
+        <h3>Comercial</h3>
+        <p>Donec auctor semper
+          ultricies. Duis euismod nibh
+          eget quam euismod ornare </p>
       </div>
       <div class="cls">
-        <img src="img/lcl_cna.jpg" alt="" />
-        <h3>LCL</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
-          doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
-        </p>
+        <img src="img/people2.jpg" alt="" />
+        <h3>Atencion al cliente</h3>
+        <p>Donec auctor semper
+          ultricies. Duis euismod nibh
+          eget quam euismod ornare </p>
       </div>
       <div class="cls">
-        <img src="img/air_cna.jpg" alt="" />
-        <h3>ÁEREO</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
-          doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
-        </p>
+        <img src="img/people3.jpg" alt="" />
+        <h3>Operaciones</h3>
+        <p>Donec auctor semper
+          ultricies. Duis euismod nibh
+          eget quam euismod ornare </p>
       </div>
     </div>
 
