--- a/contacto.html
+++ b/contacto.html
@@ -30,20 +30,20 @@
       <!-- Left Nav -->
       <ul class="nav-menu">
         <li>
-            <a href="../CNA/index.html">Inicio</a>
-          </li>
-          <li>
-            <a href="#">Nosotros</a>
-          </li>
-          <li>
-            <a href="../CNA/importaciones.html">Importar</a>
-          </li>
-          <li>
-            <a href="#">Exportar</a>
-          </li>
-          <li>
-            <a href="#">Contacto</a>
-          </li>
+          <a href="../CNA/index.html">Inicio</a>
+        </li>
+        <li>
+          <a href="../CNA/nosotros.html">Nosotros</a>
+        </li>
+        <li>
+          <a href="../CNA/importaciones.html">Importar</a>
+        </li>
+        <li>
+          <a href="../CNA/exportaciones.html">Exportar</a>
+        </li>
+        <li>
+          <a href="../CNA/contacto.html">Contacto</a>
+        </li>
       </ul>
 
       <!-- Right Nav -->
@@ -128,9 +128,9 @@
         <ul>
           <li><h3>Enlaces rápidos</h3></li>
           <li><a href="../CNA/index.html">Inicio</a></li>
-          <li><a href="#">Acerca de nosotros</a></li>
+          <li><a href="../CNA/nosotros.html">Acerca de nosotros</a></li>
           <li><a href="../CNA/importaciones.html">Importaciones</a></li>
-          <li><a href="#">Exportaciones</a></li>
+          <li><a href="../CNA/exportaciones.html">Exportaciones</a></li>
         </ul>
       </section>
       <section class="social">
