--- a/importaciones.html
+++ b/importaciones.html
@@ -30,19 +30,19 @@
       <!-- Left Nav -->
       <ul class="nav-menu">
         <li>
-          <a href="index.html">Inicio</a>
+          <a href="../CNA/index.html">Inicio</a>
         </li>
         <li>
-          <a href="#">Nosotros</a>
+          <a href="../CNA/nosotros.html">Nosotros</a>
         </li>
         <li>
-          <a href="importaciones.html">Importar</a>
+          <a href="../CNA/importaciones.html">Importar</a>
         </li>
         <li>
-          <a href="#">Exportar</a>
+          <a href="../CNA/exportaciones.html">Exportar</a>
         </li>
         <li>
-          <a href="#">Contacto</a>
+          <a href="../CNA/contacto.html">Contacto</a>
         </li>
       </ul>
 
@@ -185,13 +185,12 @@
     </section>
     <section>
       <ul>
-        <li>
-          <h3>Enlaces rápidos</h3>
-        </li>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="#">Acerca de nosotros</a></li>
-        <li><a href="importaciones.html">Importaciones</a></li>
-        <li><a href="#">Exportaciones</a></li>
+  
+        <li><h3>Enlaces rápidos</h3></li>
+        <li><a href="../CNA/index.html">Inicio</a></li>
+        <li><a href="../CNA/nosotros.html">Acerca de nosotros</a></li>
+        <li><a href="../CNA/importaciones.html">Importaciones</a></li>
+        <li><a href="../CNA/exportaciones.html">Exportaciones</a></li>
       </ul>
     </section>
     <section class="social">
