--- a/exportaciones.html
+++ b/exportaciones.html
@@ -59,11 +59,15 @@
     <!-- SHOWCASE -->
     <header class="showcase">
       <div class="ie">
-        <h2>Soluciones integrales para importadores</h2>
+        <h2>Soluciones integrales
+          para exportadores</h2>
         <p>Si usted está trayendo mercadería de un país
           extranjero a Perú. Nosotros nos encargamos de toda
           la logística:</p>
         <ul>
+
+          
+
           <li>Transporte, gestión y aduanas en el país de
             origen.</li>
           <li>Transporte internacional (Marítimo, Aéreo o
@@ -74,7 +78,7 @@
             mercadería en su domicilio o almacén.</li>
         </ul>
       </div>
-      <div class="card"><img src="img/impo_cna.png"></div>
+      <div class="card"><img src="img/expo_cna.png"></div>
 
     </header>
 
@@ -83,7 +87,7 @@
       <!-- TABLA-->
       <form action="/my-handling-form-page" method="post" class="form">
 
-        <h3>Cotice su Importación</h3>
+        <h3>Cotice su Exportación</h3>
         <div class="sec">
           <div class="box1">
             <h4>Datos personales</h4>
@@ -108,13 +112,13 @@
             <h4>Información de la carga</h4>
           </div>
           <div class="box2">
-            <label for="name"> ORIGEN DE LA CARGA (*)</label>
+            <label for="name"> DESTINO DE LA CARGA (*)</label>
             <input class="controlstn grid" type="text" id="name" placeholder="País, Ciudad, Puerto, Aeropuerto o CP"
               name="user_name">
           </div>
           
           <div class="box3">
-            <label for="mail"> ALMACEN DE LLEGADA EN PERÚ (*) </label>
+            <label for="mail"> ALMACEN DE SALIDA EN PERÚ (*) </label>
             <input class="controlstn grid" type="text" id="telefono" placeholder="Su dirección para entrega en Perú"
               name="telef">
           </div>
