--- a/exportaciones.html
+++ b/exportaciones.html
@@ -65,9 +65,6 @@
           extranjero a Perú. Nosotros nos encargamos de toda
           la logística:</p>
         <ul>
-
-          
-
           <li>Transporte, gestión y aduanas en el país de
             origen.</li>
           <li>Transporte internacional (Marítimo, Aéreo o
@@ -79,14 +76,10 @@
         </ul>
       </div>
       <div class="card"><img src="img/expo_cna.png"></div>
-
     </header>
-
     <!-- FORMULARIO-->
     <div class="formulario section-form">
-      <!-- TABLA-->
       <form action="/my-handling-form-page" method="post" class="form">
-
         <h3>Cotice su Exportación</h3>
         <div class="sec">
           <div class="box1">
@@ -106,7 +99,6 @@
               placeholder="Ingrese su correo electrónico">
           </div>
         </div>
-
         <div class="sec">
           <div class="box1">
             <h4>Información de la carga</h4>
@@ -115,8 +107,7 @@
             <label for="name"> DESTINO DE LA CARGA (*)</label>
             <input class="controlstn grid" type="text" id="name" placeholder="País, Ciudad, Puerto, Aeropuerto o CP"
               name="user_name">
-          </div>
-          
+          </div>   
           <div class="box3">
             <label for="mail"> ALMACEN DE SALIDA EN PERÚ (*) </label>
             <input class="controlstn grid" type="text" id="telefono" placeholder="Su dirección para entrega en Perú"
@@ -131,7 +122,6 @@
             <input class="controlstn grid" type="email" id="mail" placeholder="Pej. FOB" name="user_mail">
           </div>
         </div>
-
         <div class="sec">
           <div class="box1">
             <h4>Especificaciones detalladas</h4>
@@ -171,7 +161,7 @@
     <section class="cards-banner-one">
       <div class="contact">
         <h3>Lorem, ipsum dolor.</h3>
-        <a href="#" class="btn">Contáctenos ahora</a>
+        <a href="../CNA/contacto.html" class="btn">Contáctenos ahora</a>
       </div>
     </section>
   </div>
