--- a/nosotros.html
+++ b/nosotros.html
@@ -63,10 +63,10 @@
           natus qui? Tempora rerum, numquam inventore eligendi in, nostrum reprehenderit, eum cumque fugit eaque
           similique!</p>
        
-        <a href="#" class="btn">
+        <a href="../CNA/importaciones.html" class="btn">
           Quiero Importar 
         </a>
-        <a href="#" class="btn">
+        <a href="../CNA/exportaciones.html" class="btn">
           Quiero Exportar
         </a>
       </div>
@@ -108,7 +108,7 @@
     <section class="cards-banner-one">
       <div class="contact">
         <h3>Lorem, ipsum dolor.</h3>
-        <a href="#" class="btn">Contáctenos ahora</a>
+        <a href="../CNA/contacto.html" class="btn">Contáctenos ahora</a>
       </div>
     </section>
   </div>
