--- a/contacto.html
+++ b/contacto.html
@@ -82,6 +82,11 @@
            </div>
            
         </div>
+        <div class="sec">
+          <div class="boxend btn-grid">
+            <a href="#" class="btn">Enviar Mensaje</a>
+          </div>
+        </div> 
       </form>
     </div>   
     <!-- SHOWCASE -->
@@ -91,10 +96,10 @@
           natus qui? Tempora rerum, numquam inventore eligendi in, nostrum reprehenderit, eum cumque fugit eaque
           similique!</p>
        
-        <a href="#" class="btn">
+        <a href="../CNA/importaciones.html" class="btn">
           Quiero Importar 
         </a>
-        <a href="#" class="btn">
+        <a href="../CNA/exportaciones.html" class="btn">
           Quiero Exportar
         </a>
       </div>
@@ -108,7 +113,7 @@
     <section class="cards-banner-one">
       <div class="contact">
         <h3>Lorem, ipsum dolor.</h3>
-        <a href="#" class="btn">Contáctenos ahora</a>
+        <a href="../CNA/contacto.html" class="btn">Contáctenos ahora</a>
       </div>
     </section>
   </div>
