--- a/importaciones.html
+++ b/importaciones.html
@@ -167,7 +167,7 @@
     <section class="cards-banner-one">
       <div class="contact">
         <h3>Lorem, ipsum dolor.</h3>
-        <a href="#" class="btn">Contáctenos ahora</a>
+        <a href="../CNA/contacto.html" class="btn">Contáctenos ahora</a>
       </div>
     </section>
   </div>
